--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.32.0",
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/react-syntax-highlighter": "^15.5.13",
