--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-syntax-highlighter": "^15.6.6",
     "tailwindcss": "^4.1.12"
   },
